--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
                     <h1>profilename</h1>
                     <h2>postlocation</h2>
                 </div>
+                <img src="images/post-vangogh.jpg" alt="Self portrait of Vincent van Gogh. The pain">
             </section>
+            
         </div>
     </body>
 </html>
